install-k8s/gateway-api/examples/backendtrafficpolicy-upstream-error.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: upstream-error
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  responseOverride:
    - match:
        statusCodes:
          - type: Value
            value: 500
          - type: Value
            value: 502
          - type: Value
            value: 503
      source: Local
      response:
        contentType: text/html; charset=utf-8
        statusCode: 503
        body:
          type: ValueRef
          valueRef:
            group: ""
            kind: ConfigMap
            name: upstream-error-body
