install-k8s/gateway-api/examples/httproute-website-ssr-beta.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-eg-website-ssr-beta
  namespace: default
spec:
  parentRefs:
    - name: eg
      namespace: default
      kind: Gateway
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /website
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: website-ssr-beta
          port: 8094
